tests/ui/extern-flag/empty-extern-arg.stderr
error: extern location for std does not exist: 

error: `#[panic_handler]` function required, but not found

error: unwinding panics are not supported without std
   |
   = help: using nightly cargo, use -Zbuild-std with panic="abort" to avoid unwinding
   = note: since the core library is usually precompiled with panic="unwind", rebuilding your crate with panic="abort" may not be enough to fix the problem

error: requires `sized` lang_item
  --> $DIR/empty-extern-arg.rs:6:11
   |
LL | fn main() {}
   |           ^^

error: aborting due to 4 previous errors

